# taskflow-coding-bench-2026

./: .gitignore  ISSUE.md  README.md  pyproject.toml
app/: database.py  main.py  schemas.py
app/middleware/: request_logger.py
app/models/: __init__.py  comment.py  project.py  task.py  user.py  workflow.py
app/routes/: comments.py  projects.py  tasks.py  users.py  workflows.py
app/services/: comment_service.py  project_service.py  task_service.py  user_service.py  workflow_service.py
tests/: conftest.py  test_comments.py  test_projects.py  test_tasks.py  test_users.py  test_workflows.py
